gcc/testsuite/gcc.test-framework/dg-error-nocache-exp-P.c
/* { dg-options "-DDEFINED" } */

int
main ()
{
  int
} /* { dg-error "expected" "" { target def_nocache } } */
